Corrected Batch size issues and added slot to img function

--- a/train_scripts/trial.ipynb
+++ b/train_scripts/trial.ipynb
@@ -2,21 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py \n",
+    "from tqdm import tqdm\n",
+    "from src.utils.misc import read_config\n",
+    "from src.slot_attention import UOD\n",
+    "from src.data.builder import build_dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: h5py in /home/cse/btech/cs1210561/anaconda3/lib/python3.11/site-packages (3.9.0)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /home/cse/btech/cs1210561/anaconda3/lib/python3.11/site-packages (from h5py) (1.24.3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install h5py\n",
-    "import h5py \n",
+    "\n",
     "train_images = h5py.File(\"/home/cse/btech/cs1210561/scratch/CLEVRTEX_new/train.hdf5\", \"r\")\n",
     "train_images = train_images['images'][:]"
    ]
@@ -24,48 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(71816, 224, 224, 3)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_images.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'ToTensor'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m train_images[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m x\u001b[38;5;241m.\u001b[39mToTensor()\u001b[38;5;241m.\u001b[39mshape\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'ToTensor'"
-     ]
-    }
-   ],
-   "source": [
-    "x = train_images[0]\n",
-    "x.ToTensor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "class CLEVRTExDataset(Dataset):\n",
+    "class CLEVRTExDataset_Old(Dataset):\n",
     "    def __init__(self, image_folder, image_size = 224):\n",
     "        self.image_folder = image_folder\n",
     "        self.image_files = [os.path.join(image_folder, f) for f in os.listdir(image_folder) if f.endswith(('.png', '.jpg'))]\n",
@@ -129,12 +99,12 @@
     "        img_path = self.image_files[idx]\n",
     "        image = Image.open(img_path).convert('RGB')\n",
     "        image = self.val_transform_image(image)\n",
-    "        return image\n"
+    "        return {'image':image, 'name':img_path.split('/')[-1]}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,35 +112,12 @@
     "from torchvision import transforms\n",
     "import torchvision.transforms.functional as TF\n",
     "import torch\n",
-    "dat = CLEVRTExDataset(image_folder = \"/home/cse/btech/cs1210561/scratch/CLEVRTEX_new/InternImgs\")"
+    "dat = CLEVRTExDataset_Old(image_folder = \"/home/cse/btech/cs1210561/scratch/CLEVRTEX_new/InternImgs\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 224, 224])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from PIL import Image, ImageFile\n",
-    "\n",
-    "img = dat[0]\n",
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,129 +126,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 224, 224])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img2 = dnew[0]\n",
-    "img2.shape"
+    "config_file = '/home/cse/btech/cs1210561/scratch/SA/configs/our_config.py'\n",
+    "config = read_config(config_file)\n",
+    "model = UOD(config)\n",
+    "model = model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[-0.3198, -0.3027, -0.3198,  ..., -0.3369, -0.3541, -0.3369],\n",
-       "         [-0.3198, -0.3027, -0.3198,  ..., -0.3369, -0.3369, -0.3541],\n",
-       "         [-0.3027, -0.3027, -0.3027,  ..., -0.3541, -0.3541, -0.3712],\n",
-       "         ...,\n",
-       "         [-0.0458, -0.0458, -0.0458,  ...,  0.5193,  0.5193,  0.5193],\n",
-       "         [-0.0458, -0.0458, -0.0458,  ...,  0.5193,  0.5193,  0.5193],\n",
-       "         [-0.0458, -0.0629, -0.0458,  ...,  0.5193,  0.5193,  0.5193]],\n",
-       "\n",
-       "        [[-0.1975, -0.1800, -0.1975,  ..., -0.2150, -0.2325, -0.2150],\n",
-       "         [-0.1975, -0.1800, -0.1975,  ..., -0.2325, -0.2150, -0.2325],\n",
-       "         [-0.1800, -0.1800, -0.1800,  ..., -0.2325, -0.2325, -0.2500],\n",
-       "         ...,\n",
-       "         [ 0.0651,  0.0651,  0.0651,  ...,  0.6078,  0.6254,  0.6078],\n",
-       "         [ 0.0651,  0.0651,  0.0651,  ...,  0.6078,  0.6078,  0.6078],\n",
-       "         [ 0.0651,  0.0476,  0.0651,  ...,  0.6078,  0.6078,  0.6078]],\n",
-       "\n",
-       "        [[ 0.0082,  0.0256,  0.0256,  ...,  0.0082, -0.0092, -0.0092],\n",
-       "         [ 0.0256,  0.0431,  0.0256,  ..., -0.0092, -0.0092, -0.0092],\n",
-       "         [ 0.0431,  0.0256,  0.0431,  ..., -0.0092, -0.0092, -0.0267],\n",
-       "         ...,\n",
-       "         [ 0.2696,  0.2696,  0.2522,  ...,  0.7402,  0.7576,  0.7402],\n",
-       "         [ 0.2522,  0.2522,  0.2696,  ...,  0.7402,  0.7576,  0.7402],\n",
-       "         [ 0.2696,  0.2522,  0.2522,  ...,  0.7402,  0.7402,  0.7402]]],\n",
-       "       dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img2"
+    "checkpoint_path = '/home/cse/btech/cs1210561/scratch/SA/output/clevr_run_res112/checkpoints/epoch_468_step_524999.pth'\n",
+    "checkpoint = torch.load(checkpoint_path)\n",
+    "model.load_state_dict(checkpoint['state_dict'])\n",
+    "model = model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 224, 224])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img3 = dnew[0]\n",
-    "img3.shape"
+    "train_dataloader = build_dataloader(dnew, num_workers=config.num_workers, batch_size=config.train_batch_size, shuffle=True)\n",
+    "pbar = tqdm(enumerate(train_dataloader), ncols = 120)\n",
+    "pbar.set_postfix({\"loss\":100, \"rank:\": 1})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[-0.3198, -0.3027, -0.3198,  ..., -0.3369, -0.3541, -0.3369],\n",
-       "         [-0.3198, -0.3027, -0.3198,  ..., -0.3369, -0.3369, -0.3541],\n",
-       "         [-0.3027, -0.3027, -0.3027,  ..., -0.3541, -0.3541, -0.3712],\n",
-       "         ...,\n",
-       "         [-0.0458, -0.0458, -0.0458,  ...,  0.5193,  0.5193,  0.5193],\n",
-       "         [-0.0458, -0.0458, -0.0458,  ...,  0.5193,  0.5193,  0.5193],\n",
-       "         [-0.0458, -0.0629, -0.0458,  ...,  0.5193,  0.5193,  0.5193]],\n",
-       "\n",
-       "        [[-0.1975, -0.1800, -0.1975,  ..., -0.2150, -0.2325, -0.2150],\n",
-       "         [-0.1975, -0.1800, -0.1975,  ..., -0.2325, -0.2150, -0.2325],\n",
-       "         [-0.1800, -0.1800, -0.1800,  ..., -0.2325, -0.2325, -0.2500],\n",
-       "         ...,\n",
-       "         [ 0.0651,  0.0651,  0.0651,  ...,  0.6078,  0.6254,  0.6078],\n",
-       "         [ 0.0651,  0.0651,  0.0651,  ...,  0.6078,  0.6078,  0.6078],\n",
-       "         [ 0.0651,  0.0476,  0.0651,  ...,  0.6078,  0.6078,  0.6078]],\n",
-       "\n",
-       "        [[ 0.0082,  0.0256,  0.0256,  ...,  0.0082, -0.0092, -0.0092],\n",
-       "         [ 0.0256,  0.0431,  0.0256,  ..., -0.0092, -0.0092, -0.0092],\n",
-       "         [ 0.0431,  0.0256,  0.0431,  ..., -0.0092, -0.0092, -0.0267],\n",
-       "         ...,\n",
-       "         [ 0.2696,  0.2696,  0.2522,  ...,  0.7402,  0.7576,  0.7402],\n",
-       "         [ 0.2522,  0.2522,  0.2696,  ...,  0.7402,  0.7576,  0.7402],\n",
-       "         [ 0.2696,  0.2522,  0.2522,  ...,  0.7402,  0.7402,  0.7402]]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img3"
+    "import pickle\n",
+    "\n",
+    "all_results = []\n",
+    "\n",
+    "for i, batch in enumerate(pbar):\n",
+    "    model.eval()  \n",
+    "\n",
+    "\n",
+    "    images = batch[1]\n",
+    "    inp = {\"images\": images} \n",
+    "    \n",
+    "    results = model(inp)\n",
+    "    \n",
+    "    slots = results['slots']\n",
+    "    \n",
+    "    for name, slot in zip(names, slots):\n",
+    "        all_results.append({'name': name, 'slots': slot.cpu().detach().numpy()})\n",
+    "    \n",
+    "    \n",
+    "    if i == 0:\n",
+    "        break\n",
+    "\n",
+    "output_file = \"image_slots_data.pkl\"\n",
+    "with open(output_file, \"wb\") as f:\n",
+    "    pickle.dump(all_results, f)\n",
+    "\n",
+    "print(f\"Data saved to {output_file}\")\n"
    ]
   },
   {
